--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "author": "Antonio Fullone",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf lib && webpack",
-    "cypress": "cypress open"
+    "build": "rm -rf lib && webpack"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
